src/objects/Glxy_ProjectLocation__c.object
<CustomObject>
    <description>This table contains the Building information for each project.  One project can have multiple buildings assocated with it.</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>BuildingNumber__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildingName__c</fullName>
        <formula>BuildingNumber__r.Building_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildingNumber__c</fullName>
        <label>Building Number</label>
        <referenceTo>PBS_Building__c</referenceTo>
        <relationshipLabel>Project Locations</relationshipLabel>
        <relationshipName>Project_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>BuildingNumber__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <formula>BuildingNumber__r.Location_Code_Plus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLocationId__c</fullName>
        <externalId>true</externalId>
        <label>ProjectLocationId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <referenceTo>Glxy_LeaseProjects__c</referenceTo>
        <relationshipName>Project_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>BuildingNumber__r.State_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <label>Project Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProjectNumber__c</columns>
        <columns>LocationCode__c</columns>
        <columns>BuildingName__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Project Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Locations</pluralLabel>
    <recordTypes>
        <fullName>Placeholder</fullName>
        <active>true</active>
        <description>Galaxy created record</description>
        <label>Placeholder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rexus</fullName>
        <active>true</active>
        <description>Rexus created record</description>
        <label>Rexus</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>